# skript_reader_datkom

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
.gemini/: rules.md
src/: merge.py  pdf_to_slides.py  prompt.py  slides_to_text.py  text_to_speech.py
terraform/: main.tf  terraform.tfvars
tests/: test_tts_resilience.py
