[project]
name = "skript-reader-datkom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-aiplatform>=1.140.0",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.66.0",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
]
